--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 </head>
 
 <body>
-
+  <div class=" spinner d-flex justify-content-center align-items-center">
+    <span class="loader"></span>
+  </div>
+  
+  
   <div class="display d-none">
     <button class="btn-close btn-close-white" id="btnClose"></button>
     <div class="container">
@@ -50,7 +54,7 @@
             <a class="nav-link active" aria-current="page" href="#">MMORPG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">SHOTTER</a>
+            <a class="nav-link" href="#">SHOOTER</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">SAILING</a>
@@ -79,7 +83,6 @@
   </div>
 
   <script type="module" src="js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/index.js"></script>
   <script type="module" src="js/ui.js"></script>
   <script type="module" src="js/games.js"></script>
   <script type="module" src="js/details.js"></script>
