--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Games</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -17,13 +20,13 @@
   <div class=" spinner d-flex justify-content-center align-items-center">
     <span class="loader"></span>
   </div>
-  
-  
+
+
   <div class="display d-none">
     <button class="btn-close btn-close-white" id="btnClose"></button>
     <div class="container">
       <div class="row pt-4">
-        
+
       </div>
     </div>
 
